--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "jspdf": "^2.5.1", // <--- ADICIONADO!
+    "jspdf": "^2.5.1",
     "lucide-react": "^0.363.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -18,7 +18,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/jspdf": "^2.0.0", // <--- ADICIONADO PARA TYPESCRIPT!
+    "@types/jspdf": "^2.0.0",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@types/uuid": "^9.0.8",
