--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^10.9.0", // <--- ADICIONADO!
     "jspdf": "^2.5.1",
     "lucide-react": "^0.363.0",
     "react": "^18.2.0",
