--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^0.15.0", // <--- ADICIONADO!
     "firebase": "^10.9.0",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.363.0",
